# kiorg

./: .ai_instructions.md  .clinerules  .gitignore  .gitmodules  .windsurfrules  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.cargo/: config.toml
.config/: nextest.toml
.github/prompts/: lint.prompt.md
.github/workflows/: ci.yml  clean_disk_space.sh
benches/: center_panel_bench.rs  top_banner_bench.rs
crates/kiorg/: Cargo.toml
crates/kiorg/benches/: center_panel_bench.rs  top_banner_bench.rs
crates/kiorg/src/: app.rs  font.rs  input.rs  lib.rs  main.rs  startup_error.rs  theme.rs  visit_history.rs
crates/kiorg/src/config/: mod.rs  shortcuts.rs
crates/kiorg/src/models/: dir_entry.rs  mod.rs  preview_content.rs  tab.rs
crates/kiorg/src/notifications/: mod.rs
crates/kiorg/src/plugins/: manager.rs  mod.rs
crates/kiorg/src/ui/: center_panel.rs  file_list.rs  help_window.rs  left_panel.rs  mod.rs  path_nav.rs  rename.rs  right_panel.rs  search_bar.rs  style.rs  terminal.rs  top_banner.rs  update.rs
crates/kiorg/src/ui/egui_notify/: mod.rs
crates/kiorg/src/ui/popup/: about.rs  action_history.rs  add_entry.rs  bookmark.rs  delete.rs  ebook_viewer.rs  exit.rs  file_drop.rs  frameless_popup.rs  fuzzy_search_popup.rs  generic_message.rs  goto_path.rs  image_viewer.rs  mod.rs  open_with.rs  pdf_viewer.rs  plugin.rs  plugin_viewer.rs  rename.rs  sort_toggle.rs  teleport.rs  text_input_popup.rs  theme.rs  video_viewer.rs  volumes.rs  window_utils.rs
crates/kiorg/src/ui/popup/preview/: doc.rs  image.rs  mod.rs  video.rs
crates/kiorg/src/ui/preview/: directory.rs  doc.rs  ebook.rs  image.rs  loading.rs  mod.rs  pdf.rs  plugin.rs  tar.rs  text.rs  video.rs  zip.rs
crates/kiorg/src/utils/: cache.rs  file_operations.rs  format.rs  icon.rs  mod.rs  preview_cache.rs  rollback.rs
crates/kiorg/tests/: config_shortcut_serialization_test.rs  generate_screenshots_test.rs  initial_path_test.rs  ui_action_history_test.rs  ui_add_entry_test.rs  ui_bookmark_test.rs  ui_config_error_test.rs  ui_copy_highlight_test.rs  ui_cut_highlight_test.rs  ui_delete_confirmation_test.rs  ui_directory_copy_test.rs  ui_epub_preview_test.rs  ui_exit_popup_test.rs  ui_exit_test.rs  ui_file_drop_test.rs  ui_file_operations_test.rs  ui_file_selection_test.rs  ui_filesystem_notify_test.rs  ui_goto_entry_with_filter_test.rs  ui_goto_path_test.rs  ui_help_test.rs  ui_invalid_shortcuts_test.rs  ui_multi_key_sequence_test.rs  ui_navigation_test.rs  ui_page_down_small_list_test.rs  ui_paste_clear_marked_test.rs  ui_path_nav_edit_icon_test.rs  ui_pdf_page_count_test.rs  ui_preview_popup_key_consumption_test.rs  ui_preview_popup_test.rs  ui_preview_test.rs  ui_range_selection_test.rs  ui_remove_selection_test.rs  ui_rename_popup_test.rs  ui_search_test.rs  ui_select_entry_test.rs  ui_shortcut_display_test.rs  ui_shortcuts_test.rs  ui_sort_by_name_test.rs  ui_sort_toggle_popup_test.rs  (+9 more)
crates/kiorg/tests/mod/: ui_test_helpers.rs
crates/kiorg_plugin/: Cargo.toml  README.md
crates/kiorg_plugin/src/: lib.rs
crates/mimeapps/: Cargo.toml  README.md
crates/mimeapps/src/: lib.rs  linux_impl.rs  macos_impl.rs  windows_impl.rs
crates/pdfium-bind/: Cargo.toml  README.md  build.rs
crates/pdfium-bind/scripts/: generate_checksums.sh
crates/pdfium-bind/src/: lib.rs
crates/pdfium-bind/src/ffi/: bindgen.rs  dynamic_lib.rs  mod.rs  static_lib.rs
examples/demo_plugin/: Cargo.toml  README.md
examples/demo_plugin/src/: main.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  ui_style_guide.md
nix/: nixos-module.nix  packages.nix  shells.nix
plugins/heif/: Cargo.toml
plugins/heif/src/: main.rs
src/: app.rs  font.rs  input.rs  lib.rs  main.rs  open_wrap.rs  startup_error.rs  theme.rs  visit_history.rs
src/config/: colors.rs  mod.rs  shortcuts.rs
src/models/: action_history.rs  dir_entry.rs  mod.rs  preview_content.rs  tab.rs
src/notifications/: toast.rs
src/tests/: ui_tests.rs
src/ui/: about_dialog.rs  about_popup.rs  add_entry_popup.rs  bookmark_popup.rs  center_panel.rs  delete_dialog.rs  delete_popup.rs  dialogs.rs  exit_dialog.rs  exit_popup.rs  file_drop_popup.rs  file_list.rs  help_window.rs  left_panel.rs  mod.rs  notification.rs  open_with_popup.rs  path_nav.rs  popup_utils.rs  preview.rs  rename_popup.rs  right_panel.rs  search_bar.rs  separator.rs  style.rs  teleport_popup.rs  terminal.rs  theme_popup.rs  top_banner.rs  update.rs  window_utils.rs
src/ui/egui_notify/: mod.rs  toast.rs
src/ui/popup/: about.rs  add_entry.rs  bookmark.rs  delete.rs  exit.rs  file_drop.rs  mod.rs  open_with.rs  rename.rs  sort_toggle.rs  theme.rs  utils.rs  volumes.rs  window_utils.rs  windows_drives.rs
src/ui/preview/: directory.rs  doc.rs  image.rs  loading.rs  mod.rs  tar.rs  text.rs  video.rs  zip.rs
src/ui/preview_popup/: doc.rs  image.rs  mod.rs
src/utils/: color.rs  icon.rs  mod.rs  rollback.rs
tests/: config_shortcut_serialization_test.rs  initial_path_test.rs  ui_action_history_test.rs  ui_add_entry_test.rs  ui_bookmark_test.rs  ui_bulk_delete_test.rs  ui_close_tab_test.rs  ui_config_error_test.rs  ui_copy_highlight_test.rs  ui_custom_themes_test.rs  ui_cut_highlight_test.rs  ui_cut_unmarked_file_test.rs  ui_delete_confirmation_test.rs  ui_directory_copy_test.rs  ui_epub_page_count_test.rs  ui_epub_preview_test.rs  ui_exit_popup_test.rs  ui_exit_test.rs  ui_file_drop_test.rs  ui_file_list_refresh_selection_preservation.rs  ui_file_operations_test.rs  ui_file_selection_test.rs  ui_filesystem_notify_test.rs  ui_goto_entry_with_filter_test.rs  ui_help_test.rs  ui_history_navigation_test.rs  ui_invalid_shortcuts_test.rs  ui_navigation_test.rs  ui_paste_clear_marked_test.rs  ui_pdf_page_count_test.rs  ui_preview_popup_key_consumption_test.rs  ui_preview_popup_test.rs  ui_preview_test.rs  ui_range_selection_test.rs  ui_remove_selection_test.rs  ui_rename_popup_test.rs  ui_rename_selection_test.rs  ui_search_test.rs  ui_select_entry_test.rs  ui_shortcut_display_test.rs  (+15 more)
tests/mod/: ui_test_helpers.rs
(+5 files in other folders)
