[workspace]
members = [
    "crates/kiorg",
    "crates/kiorg_plugin",
    "crates/mimeapps",
    "crates/kiorg_plugin/examples/demo_plugin",
    "plugins/heif",
    "crates/pdfium-bind",
]
default-members = ["crates/kiorg"]
resolver = "2"

[workspace.dependencies]
kiorg_plugin = { path = "crates/kiorg_plugin" }
mimeapps = { path = "crates/mimeapps" }
