[workspace]
members = [
    "crates/kiorg",
    "crates/kiorg_plugin",
    "crates/mimeapps",
    "crates/kiorg_plugin/examples/demo_plugin",
    "plugins/heif",
    "crates/pdfium-bind",
]
default-members = ["crates/kiorg"]
resolver = "2"

[workspace.dependencies]
kiorg_plugin = { path = "crates/kiorg_plugin" }
mimeapps = { path = "crates/mimeapps" }
ffmpeg-sidecar = "2.4.0"
rayon = "1"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
