[package]
name = "mimeapps"
version = "0.1.0"
edition = "2024"
authors = ["houqp"]
description = "XDG mimeapps.list parser and application lookup"
license = "MIT"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
file_type = "0"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2" }
objc2-foundation = { version = "0.3.2" }
