[package]
name = "mimeapps"
version = "0.1.0"
edition = "2024"
authors = ["houqp"]
description = "Cross-platform library for looking up registered applications for a given file path"
license = "MIT"
readme = "README.md"
repository = "https://github.com/houqp/kiorg"
homepage = "https://github.com/houqp/kiorg"
keywords = ["mime", "xdg", "macos", "freedesktop"]
categories = ["os::linux-apis", "os::macos-apis"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
file_type = "0"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2" }
objc2-foundation = { version = "0.3.2" }
