[package]
name = "pdfium-bind"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["houqp"]
description = "Rust bindings for PDFium with vendored prebuilt binaries"
license = "MIT"
readme = "README.md"
repository = "https://github.com/houqp/kiorg"
homepage = "https://github.com/houqp/kiorg"
keywords = ["pdf", "pdfium", "bindings", "ffi", "rendering"]
categories = ["external-ffi-bindings", "rendering"]

[dependencies]
link-cplusplus = "1"
libloading = { version = "0", optional = true }
tempfile = { version = "3", optional = true }

[build-dependencies]
bindgen = "0.72"
ureq = "2"
flate2 = "1"
tar = "0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
static = []
default = ["tempfile", "libloading"]
